# phi-deidentification-pipeline-gcp

./: .env.example  .gitignore  README.md  alembic.ini  deploy.sh  docker-compose.yml  grant-access.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/routes/: ingest.py  records.py
app/core/: auth.py  config.py  database.py  logging_config.py  models.py  schemas.py
app/phi/: claude_fallback.py  detector.py  replacer.py
app/tasks/: celery_app.py  deidentify.py
app/telemetry/: metrics.py  tracing.py
docker/: Dockerfile.api  Dockerfile.worker  prometheus.yml
infra/: gke.tf  outputs.tf  variables.tf
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  worker-deployment.yaml  worker-hpa.yaml
scripts/: deploy.sh  generate_token.py  infra-down.sh  seed.py
